<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSTools</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Remove</string>
    <string-array name="units_speed">
        <item>km/h</item>
        <item>mph</item>
        <item>m/s</item>
        <item>knot</item>
    </string-array>
    <string-array name="units_distance">
        <item>km</item>
        <item>mi</item>
        <item>m</item>
        <item>n. mi</item>
    </string-array>
    <string-array name="units_shortdistance">
        <item>m</item>
        <item>ft</item>
        <item>m</item>
    </string-array>
    <string name="units_lat">lat</string>
    <string name="units_lon">lon</string>
    <string name="units_heading">deg</string>
    <string name="pref_units_key">preference_units</string>
    <string name="pref_units">Default Units</string>
    <string name="pref_units_summary">Unit for widgets which don\'t specify their own</string>
    <string name="action_resize">Resize</string>
    <string name="action_edit">Edit</string>
    <string-array name="pref_unit_types">
        <item>Metric</item>
        <item>Imperial</item>
        <item>SI</item>
        <item>Nautical</item>
    </string-array>
    <string-array name="pref_unit_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="edit_widget_title">Edit Widget</string>
    <string name="add_widget_title">Add Widget</string>
    <string name="action_record">Record</string>
    <string name="local_service_started">Recording Track</string>
    <string name="local_service_stopped">Stopped Recording Track</string>
    <string name="local_service_label">Currently recording a gps track in GPSTools</string>
    <string name="local_service_bound">Bound Service</string>
    <string name="pref_display_freq_key">preference_display_frequency</string>
    <string name="pref_display_freq">Display Update Frequency</string>
    <string name="pref_record_freq_key">preference_record_frequency</string>
    <string name="pref_record_freq">Record Update Frequency</string>
    <string name="invalid_track">Invalid Track</string>
    <string name="confirm_delete">Are you sure you want to delete this track?</string>
    <string name="delete_track">Delete Track</string>
    <string name="cancel">Cancel</string>
    <string name="action_export">Export</string>
    <string name="track_saved">Track Saved</string>
    <string name="export_failed">Export failed. Mount sdcard first</string>
    <string name="units_temp">°C</string>
    <string name="units_volt">V</string>
    <string name="units_cm">cm</string>
    <string name="units_lx">lx</string>
    <string name="units_pressure">hPa</string>
    <string name="units_percent">%</string>
    <string name="units_acceleration">m/s²</string>
    <string name="pref_orientation">Dashboard Orientation</string>
    <string name="pref_orientation_key">pref_orientation</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="activity_tracks">Tracks</string>
    <string name="activity_track">Track</string>
    <string name="title_activity_ble">BLE Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="ble_not_supported">Sorry BLE is not supported on your device</string>
    <string name="error_bluetooth_not_supported">Bluetooth isn\'t even supported!</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Scan</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No Data</string>
    <string name="label_data">Data</string>
    <string name="label_state">State</string>
    <string name="label_device_address">Address</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
</resources>